--- a/rdpwrap.ini
+++ b/rdpwrap.ini
@@ -5719,3 +5719,27 @@ bRemoteConnAllowed.x64=105010
 bMultimonAllowed.x64  =105014
 ulMaxDebugSessions.x64=105018
 bFUSEnabled.x64       =10501C
+
+[10.0.22000.652]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=991E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26E50
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.652-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
